src/test/deca/syntax/invalid/var_init_termemanquant.deca
//  Description :
//            Initialisation d'une variable sans terme à droite du égal
//
// Résultat:
//mismatched input ';'
//
{
    boolean x = ;
}